# PurushotamGupta_Bits_Hyd

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LLM_SETUP.md  README.md  RENDER_FIX.md  SETUP.md  pyproject.toml  render.yaml  requirements.txt
docs/: README.md
src/bill_extraction_api/: settings.py
src/bill_extraction_api/app/: main.py  schemas.py
src/bill_extraction_api/services/: document_fetcher.py  llm_parser.py  ocr.py  parser.py  preprocess.py  summarizer.py
tests/: test_api.py
